---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary expr_has_concept_has_spelled_wrong;\n\nfun test() {\n    x hasnt Concept;\n}\n"
input_file: tests/parser/test-data/expr-has-concept-has-spelled-wrong.libsl
---
Err("encountered a syntax error at L6:6: no viable alternative at input \'x hasnt\'")
